// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches admin snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1rk1pm7"
  >
    <form
      class="MuiBox-root css-1gwggs0"
      novalidate=""
    >
      <div
        class="MuiBox-root css-ulz6fy"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-uenq4k-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Terms of Use
        </h4>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1wo07fj-MuiTypography-root"
        >
          You must read and sign the Terms of Use before using CyHy Dashboard.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-47jnt8-MuiTypography-root"
        >
          CyHy Dashboard is a free, self-service tool offered by the Department of Homeland Security’s Cybersecurity and Infrastructure Security Agency (CISA). Using both passive and active processes, CyHy Dashboard can continuously evaluate the cybersecurity posture of your public-facing, internet-accessible network assets for vulnerabilities or configuration issues.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1wo07fj-MuiTypography-root"
        >
          Users can only view data provided to or collected by CyHy Dashboard.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1ys2atn-MuiTypography-root"
          style="--Typography-textAlign: left;"
        >
          Once you create a CyHy Dashboard administrator account, input the Internet Protocol (IP) addresses or domains to be continuously evaluated, and select the scanning/evaluation protocols to be used, CyHy Dashboard will collect data about the sites you specified from multiple publicly-available resources, including through active interactions with your sites, if that option is selected by you. CyHy Dashboard will also examine any publicly-available, internet-accessible resources that appear to be related or otherwise associated with IPs or domains you have provided us to evaluate, presenting you with a list of those related sites for your awareness.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1ys2atn-MuiTypography-root"
          style="--Typography-textAlign: left;"
        >
          By creating a CyHy Dashboard administrator account and using this service, you request CISA’s technical assistance to detect vulnerabilities and configuration issues through CyHy Dashboard and agree to the following:
        </p>
        <div
          class="MuiStack-root css-cjh51y-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You have authority to authorize scanning/evaluation of the public-facing networks and systems you submit within CyHy Dashboard and you authorize CISA to conduct any such scans/evaluation through CyHy Dashboard;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You agree to promptly update or change the information used to identify the public-facing networks and systems to be scanned/evaluated pursuant to this authorization;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You agree to comply with any notification or authorization requirement that any third party that operates or maintains your public-facing networks or systems may impose on external vulnerability scanning services, modifying any CyHy Dashboard scans associated with your account if external scanning of those resources is later prohibited;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You accept that, while CyHy Dashboard will use best efforts to conduct scans in a way that minimizes risk to your organization’s systems and networks, CyHy Dashboard scanning activities creates some risk of degradation in performance to your organization’s systems and networks;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You agree that CISA may share data gathered by CyHy Dashboard with other federal agencies with cybersecurity responsibilities, with the Multi-State Information Sharing and Analysis Center, and with the Election Infrastructure Information Sharing and Analysis Center;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You are authorized to make the above certifications on your organization’s behalf;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You accept that CISA may modify or discontinue the CyHy Dashboard service at any time;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You acknowledge that use of CyHy Dashboard is governed exclusively by federal law and that CISA provides no warranties of any kind relating to any aspect of your use of CyHy Dashboard, including that CyHy Dashboard may detect only a limited range of vulnerabilities or configuration issues and that there is no guarantee that CyHy Dashboard will detect any or all vulnerabilities or configuration issues present in your system;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                style="--Typography-textAlign: left;"
              >
                You agree to not:
              </p>
              <div
                class="MuiStack-root css-1cifh70-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Use the CyHy Dashboard service in violation of any applicable law;
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Access or attempt to access any CyHy Dashboard account other than your own; and
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Introduce malware to the CyHy Dashboard platform or otherwise impair, harm, or disrupt the functioning or integrity of the platform in any way;
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You accept that, at CISA’s sole discretion, CISA may terminate or suspend your access to the CyHy Dashboard service due to violation of these terms or any other reason.
            </p>
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-cdrql4-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          ToU version v5-admin
        </p>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-1kgd8l-MuiFormControlLabel-root"
        >
          <span
            aria-invalid="false"
            aria-required="true"
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-ggk6y2-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              data-indeterminate="false"
              name="accept"
              required=""
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <div>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1rrbgg2-MuiTypography-root"
            >
              I accept the above Terms and Conditions.
            </span>
            <span
              aria-hidden="true"
              class="MuiFormControlLabel-asterisk css-sqghnz-MuiFormControlLabel-asterisk"
            >
               *
            </span>
          </div>
        </label>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-vdylq9-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          <strong>
            Name:
          </strong>
           John Smith
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-12gh7xo-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          <strong>
            Email:
          </strong>
           test@crossfeed.gov
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1uypp5p-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`matches user snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1rk1pm7"
  >
    <form
      class="MuiBox-root css-1gwggs0"
      novalidate=""
    >
      <div
        class="MuiBox-root css-ulz6fy"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-uenq4k-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Terms of Use
        </h4>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1wo07fj-MuiTypography-root"
        >
          You must read and sign the Terms of Use before using CyHy Dashboard.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-47jnt8-MuiTypography-root"
        >
          CyHy Dashboard is a free, self-service tool offered by the Department of Homeland Security’s Cybersecurity and Infrastructure Security Agency (CISA). Using both passive and active processes, CyHy Dashboard can continuously evaluate the cybersecurity posture of your public-facing, internet-accessible network assets for vulnerabilities or configuration issues.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1wo07fj-MuiTypography-root"
        >
          Users can only view data provided to or collected by CyHy Dashboard.
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1ys2atn-MuiTypography-root"
          style="--Typography-textAlign: left;"
        >
          By creating a CyHy Dashboard view only account and using this service, you request CISA’s technical assistance to detect vulnerabilities and configuration issues through CyHy Dashboard and agree to the following:
        </p>
        <div
          class="MuiStack-root css-cjh51y-MuiStack-root"
        >
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You accept that CISA may modify or discontinue the CyHy Dashboard service at any time;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You acknowledge that use of CyHy Dashboard is governed exclusively by federal law and that CISA provides no warranties of any kind relating to any aspect of your use of CyHy Dashboard, including that CyHy Dashboard may detect only a limited range of vulnerabilities or configuration issues and that there is no guarantee that CyHy Dashboard will detect any or all vulnerabilities or configuration issues present in your system;
            </p>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <div
              class="MuiBox-root css-0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                style="--Typography-textAlign: left;"
              >
                You agree to not:
              </p>
              <div
                class="MuiStack-root css-1cifh70-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Use the CyHy Dashboard service in violation of any applicable law;
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Access or attempt to access any CyHy Dashboard account other than your own; and
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1yp4ln"
                >
                  <span
                    aria-hidden="true"
                    class="MuiBox-root css-3poygg"
                  >
                    •
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
                    style="--Typography-textAlign: left;"
                  >
                    Introduce malware to the CyHy Dashboard platform or otherwise impair, harm, or disrupt the functioning or integrity of the platform in any way;
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-1yp4ln"
          >
            <span
              aria-hidden="true"
              class="MuiBox-root css-3poygg"
            >
              •
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-1uh7cyo-MuiTypography-root"
              style="--Typography-textAlign: left;"
            >
              You accept that, at CISA’s sole discretion, CISA may terminate or suspend your access to the CyHy Dashboard service due to violation of these terms or any other reason.
            </p>
          </div>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-cdrql4-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          ToU version v5-user
        </p>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-1kgd8l-MuiFormControlLabel-root"
        >
          <span
            aria-invalid="false"
            aria-required="true"
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-ggk6y2-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              data-indeterminate="false"
              name="accept"
              required=""
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <div>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1rrbgg2-MuiTypography-root"
            >
              I accept the above Terms and Conditions.
            </span>
            <span
              aria-hidden="true"
              class="MuiFormControlLabel-asterisk css-sqghnz-MuiFormControlLabel-asterisk"
            >
               *
            </span>
          </div>
        </label>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-vdylq9-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          <strong>
            Name:
          </strong>
           John Smith
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-12gh7xo-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          <strong>
            Email:
          </strong>
           test@crossfeed.gov
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1uypp5p-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
